jvimalprasathdev/src/objects/ErrorLogDetail__c.object
<CustomObject>
    <description>Captures Error - Used to log Technical/ Business Exceptions.</description>
    <fields>
        <fullName>Apex_Job_Master__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Apex Job Master</label>
        <referenceTo>Apex_Job_Master__c</referenceTo>
        <relationshipLabel>Error Log Details</relationshipLabel>
        <relationshipName>Error_Log_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <description>The Entire Error Message.</description>
        <label>Error Message</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Error_Source__c</fullName>
        <label>Error Source</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Type__c</fullName>
        <description>Type of Exception</description>
        <label>Error Type</label>
        <picklist>
            <picklistValues>
                <fullName>Technical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OPUS Error</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Record_ID__c</fullName>
        <description>Holds Error record ID</description>
        <label>Error Record ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <label>Severity</label>
        <picklist>
            <picklistValues>
                <fullName>Critical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Error Log Detail</label>
    <nameField>
        <displayFormat>ERRLOG-{00000}</displayFormat>
        <label>ErrorLogDetail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Error Log Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>